[package]
name = "java-game"
version = "0.1.0"
authors = ["Arne Dußin <arne.dussin@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.13.0"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]