[package]
name = "java-game"
version = "0.1.0"
authors = ["Arne Dußin <arne.dussin@live.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alga = "0.9.1"
amethyst = "0.13.0"
java-game-derive = { path = "java-game-derive" }
nalgebra = "0.18.1"
num = "0.2.0"
shred = "0.9.3"

[features]
default = ["vulkan"]
vulkan = ["amethyst/vulkan"]
metal = ["amethyst/metal"]
empty = ["amethyst/empty"]
nightly = ["shred/nightly"]
